--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
-            background-repeat: no-repeat;
+            background-position: center center;
+            background-repeat: repeat-y;
             background-size: cover;
+            background-attachment: fixed;
         }
 
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +29,27 @@
     <main>
       <h1>Teste de Imagem de Fundo</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+        
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
+
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rerum et fuga maxime animi qui officia odit, ab non dicta asperiores ipsa aliquid quod cum eum voluptatem voluptate quasi nisi.
+
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quaerat blanditiis pariatur maiores similique voluptatibus expedita. Ab saepe ea omnis iure, nemo, unde tenetur, a sapiente temporibus repellendus cumque aliquid. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, pariatur? Enim alias optio aperiam ea consequatur delectus dolore! Maxime veniam sunt alias quas cum ipsa facere rerum enim excepturi voluptate!
     </p>
     </main>
