--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit quod sed tempore, laboriosam nesciunt accusamus totam error, sapiente temporibus eligendi rerum, impedit incidunt odit qui ratione omnis sit quaerat voluptatum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit eligendi obcaecati, ex facere minus delectus rem saepe soluta officiis ut architecto assumenda! Quam id, nostrum nam atque dolores vel odit.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Oi</hi><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit quod sed tempore, laboriosam nesciunt accusamus totam error, sapiente temporibus eligendi rerum, impedit incidunt odit qui ratione omnis sit quaerat voluptatum? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit eligendi obcaecati, ex facere minus delectus rem saepe soluta officiis ut architecto assumenda! Quam id, nostrum nam atque dolores vel odit</p>">
         <p>Infelizmente seu navegador não é compativel com isso.</p>
     </iframe>
 
