--- a/exercicios/ex024/pag003.html
+++ b/exercicios/ex024/pag003.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <h1>Terceira página do site</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nihil, illo consequatur, ut molestiae odit animi unde minus libero eos nisi iure autem facere blanditiis molestias eum necessitatibus magnam voluptatem! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, quis libero debitis ea ipsum accusamus, vel explicabo eligendi odio nesciunt iure corrupti nostrum itaque nobis doloremque molestiae fugit inventore suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas vel eum vero nostrum quidem sequi modi quod quam consectetur! Accusamus voluptate mollitia inventore minus quis? Est quae voluptate corrupti quos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nihil, illo consequatur, ut molestiae odit animi unde minus libero eos nisi iure autem facere blanditiis molestias eum necessitatibus magnam voluptatem! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem, quis libero debitis ea ipsum accusamus, vel explicabo eligendi odio nesciunt iure corrupti nostrum itaque nobis doloremque molestiae fugit inventore suscipit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas vel eum vero nostrum quidem sequi modi quod quam consectetur! Accusamus voluptate mollitia inventore minus quis? Est quae voluptate corrupti quos. Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 </body>
 </html>
